--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Noodling about with Terraform",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rimraf ./build && esbuild ./noths-stack/lambda.ts --bundle --minify --platform=node --outfile=./build/lambda.js --external:aws-sdk",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "types": "tsc"
   },
   "author": "",
   "license": "UNLICENSED",
@@ -19,6 +21,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.716.0",
     "@aws-sdk/client-ssm": "^3.716.0",
-    "@aws-sdk/lib-dynamodb": "^3.716.0"
+    "@aws-sdk/lib-dynamodb": "^3.716.0",
+    "aws-sdk": "^2.1692.0"
   }
 }
